remove unused html

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-        <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.css" />
+
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#ca6098" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>React App</title>
+        <title>Boardgame Toolbox</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
